ls202/todo_list/todo_list.css
body {
    font-family: Arial, Helvetica, sans-serif;
    letter-spacing: .5px;
}

.container {
    /* outline: 3px solid rgb(37, 121, 90); */
    display: inline-flex;
    width: 100%;
    /* height: 815px; */
    
}

/* 
----------
NAV
----------
*/

nav {
    /* outline: 3px solid tan; */
    background-color: #464f77;
    color: #a7aaba;
    order: 1;
    flex-basis: 350px;
    flex-shrink: 0;
}

/*
------------ 
list heading 
------------
*/
.list-logo-and-title {
    padding-top: 65px;
    padding-left: 100px;
    padding-bottom: 5px;
    /* outline: 3px solid rgb(37, 121, 90); */
}

.list-logo-and-title img, .list-logo-and-title h2 {
    float: left;
}

.list-logo-and-title span{
    float: right;
    margin-right: 30px;
    border-radius: 10px;
    background-color: #6b7292;
    margin-top: 2px; /* positions center of img */
    padding: 1px 5px;
    /* outline: 3px solid rgb(37, 121, 90); */
}

nav img {
    padding-right: 8px;
    padding-bottom: 10px;
}

nav h2 {
    /* outline: 3px solid rgb(37, 121, 90); */
    color: rgb(230, 230, 230);
    font-weight: 400;
    font-size: 18px;
    margin-top: 2px; /* positions center of img */
}


/*
------------ 
nav list items 
------------
*/
nav ul::before {
    display: block;
    clear: both;
    content: "";
}

a {
    text-decoration: none;
    color: inherit;
}

/* nav ul {
    outline: 3px solid rgb(158, 207, 230);
} */

nav li {
    padding: 10px;
    cursor: pointer;
    /* outline: 2px solid rgb(106, 102, 211); */
}

nav li.active  {
    color: rgb(230, 230, 230);
    background-color: #383f5f;
}

nav .active dd{
    background-color: #148fd5;
    color: rgb(230, 230, 230);
}

.completed {
    text-decoration: line-through;
    color: #a7aaba;
}

ul.completed {
    /* outline: 3px solid rgb(21, 121, 167); */
    padding-bottom: 65px;
}

.completed li, nav dt {
    margin-left: 125px;
}

nav dt, nav dd {
    display: inline;
    /* outline: 3px solid peachpuff; */
}


nav dd {
    border-radius: 10px;
    background-color: #6b7292;
    padding: 1px 5px;
    float: right;
    margin-right: 20px;
}

/* 
---------
MAIN
--------
 */
main {
    order: 1;
    flex-grow: 1;
    background-color: rgb(255, 255, 255);
    /* outline: 3px solid rgb(230, 158, 220); */
    padding-left: 30px;
    padding-top: 65px;
    padding-bottom: 200px;
}

main header {
    margin-bottom: 40px;
}

main header h1, main header h2 {
    display: inline-block;
    font-weight: 400;
}

main h1 {
    font-size: 20px; 
    letter-spacing: .5px;
    margin-right: 30px;
}

main h2 {
    border-radius: 10px;
    /* outline: 3px solid pink; */
    padding: 1px 5px;
    background-color: #148fd5;
    color: rgb(230, 230, 230);
}

main a {
    color: #148fd5;
    letter-spacing: .5px;
    padding-left: 10px;
    /* outline: 3px solid rgb(198, 169, 174); */
}

main ul {
    margin-top: 20px;
    min-width: 215px;
    padding-right: 100px; 
    /* outline: 3px solid rgb(172, 49, 70); */

}

main li {
    border-top:#e7e7e7 solid 2px;
    padding: 15px 0;
    /* outline: 3px solid rgb(172, 49, 70); */
}

main li:hover {
    color: #148fd5;
    cursor: pointer;
}

.float-right {
    float: right;
}

.tickbox {
    margin-right: 10px;
}


/* 
---------------
NAV BAR TOGGLE
--------------
*/

/* Hide the checkbox itself */
.container input[type="checkbox"] {
    display: none;
}
/* Hide navbar toggle by default */
.navbar-toggle {
        margin-bottom: 60px;
        display: none;
    }

@media (max-width: 786px ) {
    /*  Hide nav by default */
    nav.expandable {
        display: none;
    }

    /* Show hamburger button  */
    .navbar-toggle {
        display: block;
        cursor: pointer;
    }
    
    /* When checked, use ~ to reach the subsequent sibling nav */
    #navbar-hamburger:checked ~ nav.expandable{
        display: block;
        }
    
}


/* 
---------
modal
--------- 
*/

.item-modal {
    outline: 3px solid purple;
    /* margin: 30px; */
    padding: 30px;
    box-sizing: border-box;
    overflow: hidden;
    width: 570px;
    height: 400px;

    /* font-family: Arial, Helvetica, sans-serif; */
}

#edit-item:checked {
    outline: 3px solid green;
}

/* .date-selection {
    outline: 3px solid pink;
} */


.item-modal label {
    /* outline: 3px solid hotpink; */
    display: inline-block;
    margin-bottom: 50px;
}

.item-modal input[type="text"], 
.date-selection,
.form-2-btns,
.item-modal textarea{
    /* outline: 4px dashed green; */
    float: right;
    width: 75%;
    font-size: inherit;
    padding: 5px 3px;
}



.date-selection select {
    width: 30%;
    font-size: inherit;
    padding: 7px;
    /* outline: 2px solid hotpink; */
    color: grey;

     /* Hide the default arrow */
    -webkit-appearance: none;
    -moz-appearance: none;
    appearance: none;

    /* Add custom icon */
    background-image: url(/ls202/todo_list/assessment_209/select.png);
    background-repeat: no-repeat;
    background-position: right 10px center; 
    /* Positions icon on the right */
    background-size: 10px;
    
    /* Add padding so text doesn't overlap the icon */
    padding-right: 30px;
}

textarea {
    box-sizing: border-box;
    font-family: Arial, Helvetica, sans-serif;
    letter-spacing: .5px;
    height: 130px;
    resize: none;
}

.button {
    background-color: #148fd5;
    color: white;
    border: none;
    padding: 5px;
    font-size: 18px;
    border-radius: 5px;
}

.form-2-btns .button {
    box-sizing: border-box;
    display: inline;
    width: 45%;
    margin-right: 15px;
}

.form-2-btns {
    margin-top: 30px;
}

